# odoTools

./: .gitignore  LICENSE  README.md  odoTools.sln
backend/: CMakeLists.txt  Cargo.toml  backend.vcxproj  backend.vcxproj.filters  config.json  log.2022-03-12  log4rs.yaml  main.cpp  manifest.rc  stdafx.h  token.cpp  token.h  user.cpp  user.h  utility.cpp  utility.h  website.sql
backend/src/: claims.rs  main.rs
backend/src/db/: mod.rs  user.rs  website.rs
backend/src/route/: info.rs  mod.rs  patch.rs  status.rs  user.rs  website.rs
backend/web/: config.json
backend1/: config.json
backend1/route/: general.rs
backend1/src/: main.rs
frontend/: README.md  Web.config  package.json  quasar.conf.js
frontend/public/: config.json  shop.json
frontend/src/boot/: axios.js
frontend/src/components/: AdminDb.vue  AdminOverview.vue  AdminWebsite.vue  ShopTable.vue  Toolbar.vue  compToolbar.vue
frontend/src/i18n/en-US/: index.js
frontend/src/i18n/zh-CN/: index.js
frontend/src/layouts/: MainLayout.vue
frontend/src/pages/: Admin.vue  Community.vue  Download.vue  Downloads.vue  Error404.vue  Index.vue  Market.vue  NewsView.vue  Shop.vue
frontend/src/router/: index.js  routes.js
frontend/src/store/: index.js
frontend/src/store/global/: mutations.js  state.js
launcher/: Cargo.toml  index.html  launcher.cpp  launcher.vcxproj  manifest.rc  package.json  quasar.config.js  service.ini
launcher/src/: main.rs
launcher/src-tauri/: Cargo.toml  odo_launcher.exe.manifest  service.ini  tauri.conf.json
launcher/src-tauri/src/: main.rs
launcher/src/i18n/en-US/: index.js
launcher/src/i18n/zh-CN/: index.js
launcher/src/pages/: IndexPage.vue
launcher1/src/: main.rs
new/: bdo.sln
new/backend/: SA_BETA_WORLDDB_0002.PaWebPublic.sql  backend.aps  backend.exe.vmp  backend.rc  backend.sln  backend.vcxproj  backend.vcxproj.filters  config.json
new/backend/common/include/: filter.h  jwt.h  node_blf.h  openbsd.h  utility.h  uuid.h
new/backend/common/src/: blowfish.cpp  filter.cpp  jwt.cpp  node_blf.cpp  utility.cpp
new/backend/include/: link.h  mssql.h  news.h  order.h  resource.h  settings.h  slide.h  staff.h  statistics.h  stdafx.h  storage.h  user.h
new/backend/src/: link.cpp  main.cpp  mssql.cpp  news.cpp  order.cpp  settings.cpp  slide.cpp  staff.cpp  statistics.cpp  storage.cpp  user.cpp
new/client/: pubspec.yaml
new/client/android/app/: build.gradle
new/client/ios/Runner.xcodeproj/: project.pbxproj
new/client/lib/: main.dart
new/client/macos/Runner.xcodeproj/: project.pbxproj
new/client/windows/runner/: Runner.rc
new/client1/: pubspec.yaml
new/client1/lib/: main.dart
new/client1/macos/Runner/Configs/: AppInfo.xcconfig
new/client1/web/: index.html
new/client1/windows/runner/: flutter_window.cpp  main.cpp
new/frontend/: README.md  package-desktop.evb  package-laptop.evb  package.json  quasar.config.js  version.json
new/frontend/aria2/: aria2.conf  aria2.session
new/frontend/public/: version.json
new/frontend/src-electron/: electron-main.ts  electron-preload.ts
new/frontend/src/boot/: axios.ts  i18n.ts
new/frontend/src/components/: fetch.ts  protocolCheck.js
new/frontend/src/i18n/en-US/: index.ts
new/frontend/src/i18n/zh-CN/: index.ts
new/frontend/src/layouts/: MainLayout.vue
new/frontend/src/pages/: AdminPage.vue  IndexPage.vue
new/frontend/src/router/: index.ts  routes.ts
new/frontend/src/stores/: store.ts
new/launcher/: launcher.aps  launcher.exe.vmp  launcher.rc  launcher.vcxproj  launcher.vcxproj.filters  main.cpp
