[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
log4rs = "*"
futures = "*"
actix-web = "*"
actix-cors = "*"
actix-session = "*"
serde = "*"
serde_json = "*"
once_cell = "*"
chrono = { version = "*", features = ["serde"] }
uuid = { version = "*", features = ["v4"] }
blake2 = "*"
urlencoding = "*"
reqwest = { version = "*", features = ["cookies", "gzip", "json"] }
anyhow = "*"
sha256 = "*"
mongodb = "*"