[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "*"
log4rs = "*"
futures = "*"
actix-web = "*"
actix-cors = "*"
actix-session = "*"
serde = "*"
serde_json = "*"
chrono = { version = "*", features = ["serde"] }
rand = "*"
reqwest = { version = "*", features = ["cookies", "gzip", "json"] }
anyhow = "*"
mongodb = "*"
bcrypt = "*"