[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
embed-resource = "*"

[dependencies]
tracing = "*"
tracing-appender = "*"
tracing-subscriber = { version = "*", features = ["env-filter"]}
tracing-futures = "*"
tracing-actix-web = "*"
tracing-unwrap = "*"
tracing-log = "*"
futures = "*"
actix-web = "*"
actix-cors = "*"
actix-files = "*"
actix-web-httpauth = "*"
actix-web-grants = { version="3.0.0-BETA.6" }
jsonwebtoken = "*"
serde = "*"
serde_json = "*"
chrono = { version = "*", features = ["serde"] }
rand = "*"
reqwest = { version = "*", features = ["cookies", "gzip", "json"] }
anyhow = "*"
mongodb = "*"
bcrypt = "*"
