[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
embed-resource = "*"

[dependencies]
tracing = "*"
tracing-appender = "*"
tracing-subscriber = { version = "*", features = ["env-filter"]}
chrono = "*"
rust-ini = "*"
anyhow = "*"
webbrowser = "*"
wry = "*"
windows = { version = "*", features = ["Win32_Foundation", "Win32_UI_Shell", "Win32_UI_WindowsAndMessaging", "Win32_System_Diagnostics_ToolHelp", "Win32_System_Threading", "Win32_System_Diagnostics_Debug", "Win32_System_Registry", "Win32_Security"] }